<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:id="@+id/spellInfo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/temporary"
                android:textSize="20sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spellCastingTimeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="6dp"
                    android:text="@string/casting_time_description"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/spellCastingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temporary"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spellRangeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="6dp"
                    android:text="@string/range_description"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/spellRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temporary"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spellComponentsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="6dp"
                    android:text="@string/components_description"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/spellComponents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temporary"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spellDurationDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="6dp"
                    android:text="@string/duration_description"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/spellDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temporary"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/spellDescriptionDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="6dp"
                android:text="@string/spell_description"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/spellDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temporary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/spellHigherLevelDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/higher_level_description"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/spellHigherLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temporary"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>